syntax = "proto3";
package protobuf;
option go_package = "protobuf";

// Request 请求结构
message RegisterRequest {
    //调用注册方法时需要携带的参数
    string name = 1;
    string password = 2;
}

// Response 响应结构
message RegisterResponse {
    int32 recode =1;
    string message = 2;
}
service RegisterService{
    // Register 测试方法
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
}
